# IA-Estudo

./: pyproject.toml
teste_ia/: __init__.py  estudo_mnist.py  problema_linear.py
teste_ia/Regressao linear/: code_tf.py  dataset_salario.csv
tests/: test_teste_ia.py
