[tool.poetry]
name = "teste_ia"
version = "0.1.0"
description = ""
authors = ["Gui Melo <guilherme.melo@solucaut.com.br>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.8.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
